exemples/exemples-inicials/app-configurada.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-amb-configuracio
spec:
  containers:
  - name: el-meu-contenidor
    image: alpine
    # Aquesta comanda imprimeix les variables i es queda adormida perquè el Pod no mori
    command: ["/bin/sh", "-c", "echo El missatge és: $MISSATGE_APP i la clau és: $CLAU_DB; sleep 3600"]
