exemples/exemples-inicials/redis-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-persistent
spec:
  containers:
  - name: redis
    image: redis:alpine
    volumeMounts:
    - name: emmagatzematge-redis
      mountPath: /data
  volumes:
  - name: emmagatzematge-redis
    persistentVolumeClaim:
      claimName: redis-dades-pvc
