exemples/exemples-inicials/nginx-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: servei-web-intern
spec:
  type: ClusterIP
  selector:
    app: el-meu-web
  ports:
    - port: 80
      targetPort: 80
