exemples/exemples-inicials/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  annotations:
    # Per Traefik v2, pots provar d'eliminar-la o deixar-la (sol ignorar-la si no toca).
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik  # <--- AFEGEIX AIXÒ (si uses k3s/traefik)
  rules:
  - host: app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: servei-web-intern
            port:
              number: 80
